# bit

./: .gitignore  .travis.yml  License.md  License.rst  Readme.md  Readme.rst  requirements.txt  setup.cfg  setup.py  tox.ini
bit/: __init__.py
bit/core/: color.py  context.py  error.py  files.py  namespace.py  target.py  task.py  utility.py  workspace.py
bit/cxx/: __init__.py  compile.py  compiler.py  configure.py  cxx.py  link.py  linker.py
docs/: conf.py  index.rst  tutorial.rst
docs/modules/: core.rst  index.rst
docs/modules/core/: color.rst  context.rst  index.rst  namespace.rst  target.rst  task.rst  utility.rst  workspace.rst
docs/modules/cxx/: configure.rst  index.rst
tests/: test_namespace.py  test_target.py  test_task.py  test_utility.py  test_workspace.py
