[nosetests]
verbosity=3
detailed-errors=1

# For the eventual transition/support of Python 3.3
[metadata]
name = bit
version = 0.4
license = BSD
author = Tres Walsh
home-page = http://mnmlstc.com
project-url =
    github, http://github.com/sahchandler/bit
keywords = bit build-system build-tools minimal build
summary = A minimal build system
description-file = Readme.md
requires-python = >=3.2
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Utilities
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3.2

[files]
packages =
    bit
    bit.core

extra_files =
    setup.py
    Readme.md
