# For the eventual transition/support of Python 3.3
[metadata]
name = bit
version = 0.4
license = BSD
author = Tres Walsh
home-page = http://mnmlstc.com
project-url =
    github, https://github.com/sahchandler/bit
    issue tracker, https://github.com/sahchandler/bit/issues
    documentation, http://bit.readthedocs.org
keywords = bit build-system build-tools minimal build
summary = An easy to use and minimal build system
description-file = Readme.rst
requires-python = >=3.2
requires-dist =
    nose (>=1.1.2)
    mako (>=0.6.2)
    color (>=0.1)
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Utilities
    Topic :: Utilities
    Intended Audience :: Developers
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3

[files]
packages =
    bit
    bit.core
    bit.cxx

extra_files =
    Readme.rst
    setup.py

# 'non-standard' settings.
[nosetests]
verbosity=3
detailed-errors=1
